--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release iCloud Notes
+name: Build and Release Windows App
 
 on:
   push:
@@ -10,31 +10,46 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     steps:
+      # Step 1: Check out the code from the repo
       - name: Check out the code
         uses: actions/checkout@v3
 
-      - name: Set up Xcode
-        uses: maxim-lobanov/setup-xcode@v1
+      # Step 2: Set up .NET environment (Adjust the version if needed)
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
         with:
-          xcode-version: '14.2'
+          dotnet-version: '7.x'  # Update this to your .NET version
 
+      # Step 3: Restore the project dependencies
       - name: Install dependencies
-        run: swift package resolve
+        run: dotnet restore
 
+      # Step 4: Build the app in Release mode
       - name: Build the app
-        run: xcodebuild -scheme "iCloudNotes" -destination "generic/platform=iOS" clean build
+        run: dotnet build --configuration Release
 
-      - name: Archive the app
-        run: xcodebuild -scheme "iCloudNotes" -archivePath build/Release.xcarchive archive
+      # Step 5: Publish the app to a folder
+      - name: Publish the app
+        run: dotnet publish -c Release -o ./publish
 
-      - name: Export IPA
-        run: xcodebuild -exportArchive -archivePath build/Release.xcarchive -exportPath build/ -exportOptionsPlist ExportOptions.plist
-
+      # Step 6: Upload the build as an artifact
       - name: Upload Release to GitHub
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: iCloudNotes
-          path: build/*.ipa
+          path: ./publish
+
+      # Step 7: Create a GitHub release and upload the build
+      - name: Create a Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./publish/**
+          tag_name: v1.0.0  # Change version as needed
+          release_name: "iCloudNotes v1.0.0"
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
