--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,41 +13,41 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # Step 1: Check out the code from the repo
+      # Step 1: Check out the code
       - name: Check out the code
         uses: actions/checkout@v3
 
-      # Step 2: Set up .NET environment (Adjust the version if needed)
+      # Step 2: Set up .NET
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.x'  # Update this to your .NET version
+          dotnet-version: '7.x'
 
-      # Step 3: Restore the project dependencies
+      # Step 3: Restore dependencies with correct path
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore ./YourProjectFolder/YourProject.sln
 
-      # Step 4: Build the app in Release mode
+      # Step 4: Build the app
       - name: Build the app
-        run: dotnet build --configuration Release
+        run: dotnet build ./YourProjectFolder/YourProject.sln --configuration Release
 
-      # Step 5: Publish the app to a folder
+      # Step 5: Publish the app
       - name: Publish the app
-        run: dotnet publish -c Release -o ./publish
+        run: dotnet publish ./YourProjectFolder/YourProject.sln -c Release -o ./publish
 
-      # Step 6: Upload the build as an artifact
+      # Step 6: Upload Release to GitHub
       - name: Upload Release to GitHub
         uses: actions/upload-artifact@v4
         with:
           name: iCloudNotes
           path: ./publish
 
-      # Step 7: Create a GitHub release and upload the build
+      # Step 7: Create a Release
       - name: Create a Release
         uses: softprops/action-gh-release@v1
         with:
           files: ./publish/**
-          tag_name: v1.0.0  # Change version as needed
+          tag_name: v1.0.0
           release_name: "iCloudNotes v1.0.0"
           draft: false
           prerelease: false
