--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release Windows App
+name: Build Windows App
 
 on:
   push:
@@ -23,33 +23,21 @@ jobs:
         with:
           node-version: '20.x' # Adjust to your Node.js version
 
-      # Step 3: Install dependencies using npm
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Build the app (assuming you have a build script in package.json)
+      # Step 4: Build the app
       - name: Build the app
         run: npm run build
 
-      # Step 5: Package the app (assuming you use something like electron-builder)
+      # Step 5: Package the app
       - name: Package the app
         run: npm run package
 
-      # Step 6: Upload Release to GitHub
-      - name: Upload Release to GitHub
+      # Step 6: Upload artifact (skipping release)
+      - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: iCloudNotes
-          path: ./dist # Change this if your build output is elsewhere
-
-      # Step 7: Create a Release
-      - name: Create a Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./dist/**
-          tag_name: v1.0.0
-          release_name: "iCloudNotes v1.0.0"
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: ./dist # Adjust path if needed
