--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,38 @@
 name: Build Windows App
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      # Step 1: Check out the code
-      - name: Check out the code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Step 2: Set up Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x' # Adjust to your Node.js version
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      # Step 4: Build the app
-      - name: Build the app
-        run: npm run build
+    - name: Build
+      run: npm run build
 
-      # Step 5: Package the app
-      - name: Package the app
-        run: npm run package
+    - name: Package
+      run: npm run package
 
-      # Step 6: Upload artifact (skipping release)
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: iCloudNotes
-          path: ./dist # Adjust path if needed
+    - name: Sign Application
+      if: env.GH_TOKEN != ''
+      run: |
+        # Add your signing command here
+        signtool sign /fd SHA256 /a /tr http://timestamp.digicert.com /td SHA256 dist\iCloud Notes Setup 1.0.0.exe
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+    - name: Upload Artifact
+      run: |
+        # Upload your artifact here
+        echo "Uploading artifact..."
