--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
     "start": "electron .",
     "build": "electron-builder"
   },
-  "dependencies": {
-    "electron": "^25.1.8"
-  },
   "devDependencies": {
-    "electron-builder": "^25.1.8"
+    "electron-builder": "^25.1.8",
+    "electron": "^25.1.8"
   }
 }
