--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Configure the App
+        run: npm run configure
+
       - name: Build the App
         run: npm run build
 
